# code-analyzer

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Lexer/: DfaLexer.cpp  DfaLexer.h  ILexer.h
Lexer/DFA/: DFA.cpp  DFA.h  DFABuilder.cpp  DFABuiler.h  IDFABuilder.h
Lexer/NFA/: INFABuilder.h  NFA.h  NFABuilder.cpp  NFABuilder.h
Lexer/Reader/: IReader.h  TwoBufferReader.cpp  TwoBufferReader.h
Lexer/Regex/: IRegexParser.h  RegexAST.h  RegexParser.cpp  RegexParser.h
Lexer/Token/: Token.h  TokenType.h
Lexer/TokenSpecification/: ITokenSpecReader.h  TokenSpec.h  TokenSpecReader.cpp  TokenSpecReader.h
Parser/: IParser.h  LRParser.cpp  LRParser.h
Parser/AST/: ASTBuilder.cpp  ASTBuilder.h  ASTNode.h  IASTBuilder.h
Parser/Grammar/: Grammar.h
Parser/Reader/: GrammarReader.cpp  GrammarReader.h  IGrammarReader.h
Parser/Table/: ILR1TableBuilder.h  LR1TableBuilder.cpp  LR1TableBuilder.h  LRTable.h
Preprocessor/: GccPreprocessor.cpp  GccPreprocessor.h  IPreprocessor.h
SymbolTable/: ISymbolTable.h  SymbolTable.cpp  SymbolTable.h
test/Lexer/: DfaLexerTest.cpp
test/Lexer/DFA/: DFABuilderTest.cpp
test/Lexer/NFA/: NFABuilderTest.cpp
test/Lexer/Reader/: TwoBufferReaderTest.cpp
test/Lexer/Regex/: RegexParserTest.cpp
test/Lexer/Token/: TokenTest.cpp
test/Lexer/TokenSpecification/: TokenSpecReaderTest.cpp
test/Parser/: LRParserTest.cpp
test/Parser/AST/: ASTBuilderTest.cpp
test/Parser/Reader/: GrammarReaderTest.cpp
test/Parser/Table/: LR1TableBuilderTest.cpp
test/Preprocessor/: PreprocessorTest.cpp
test/SymbolTable/: SymbolTableTest.cpp
